HealthClock is a JavaFX-based application that helps users manage their medication schedules. It allows users to upload prescription images or manually input details to set automatic alarms for medicine times. Alarms repeat based on prescription instructions and are automatically deleted after the specified period.

--- a/src/main/resources/com/tanjid/healthclock/hello-view.fxml
+++ b/src/main/resources/com/tanjid/healthclock/hello-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:controller="com.tanjid.healthclock.HelloController"
+<AnchorPane fx:controller="com.tanjid.healthclock.HomeController"
             xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             stylesheets="@style.css"
