--- a/src/main/resources/com/tanjid/healthclock/home-view.fxml
+++ b/src/main/resources/com/tanjid/healthclock/home-view.fxml
@@ -5,21 +5,17 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="com.tanjid.healthclock.HelloController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.tanjid.healthclock.HelloController">
     <children>
         <!-- Image and Quote Section -->
         <ImageView fx:id="logoImage" fitHeight="150" fitWidth="150" layoutX="225.0" layoutY="14.0" />
         <Text fx:id="quoteText" layoutX="223.0" layoutY="193.0" style="-fx-font-size: 18px; -fx-font-weight: bold;" text="“Health is wealth”" />
 
         <!-- Buttons Section -->
-        <Button fx:id="btnAddPrescription"
-                layoutX="175" layoutY="230"
-                onAction="#onAddPrescription"
-                prefWidth="250"
-                style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-font-size: 14px;"
-                text="Add Prescription" />
+        <Button fx:id="btnAddPrescription" layoutX="175" layoutY="230" onAction="#onAddPrescription" prefWidth="250" style="-fx-background-color: #4CAF50; -fx-text-fill: white; -fx-font-size: 14px;" text="Add Prescription" />
 
         <Button fx:id="btnViewMedicines" layoutX="175" layoutY="270" onAction="#handleViewMedicinesClick" prefWidth="250" style="-fx-background-color: #2196F3; -fx-text-fill: white; -fx-font-size: 14px;" text="View Medicines &amp; Alarm" />
-        <Button fx:id="btnManageSettings" layoutX="175" layoutY="310" onAction="#handleManageSettingsClick" prefWidth="250" style="-fx-background-color: #FF9800; -fx-text-fill: white; -fx-font-size: 14px;" text="Manage Settings" />
+        <Button fx:id="btnManageSettings" layoutX="175" layoutY="310" onAction="#onManageSettings" prefWidth="250" style="-fx-background-color: #FF9800; -fx-text-fill: white; -fx-font-size: 14px;" text="About" />
+
     </children>
 </AnchorPane>
