--- a/src/main/resources/com/tanjid/healthclock/view-medicines.fxml
+++ b/src/main/resources/com/tanjid/healthclock/view-medicines.fxml
@@ -1,17 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.tanjid.healthclock.ViewMedicinesController"
-            prefWidth="600" prefHeight="400"
+            prefWidth="800" prefHeight="500"
             style="-fx-background-color: #f0f8ff;">
     <children>
+
         <!-- Back Button -->
         <Button layoutX="20" layoutY="20" text="Back to Home" onAction="#goBackToHome"
                 style="-fx-background-color: #ff6666; -fx-text-fill: white; -fx-font-size: 14px;
                        -fx-padding: 8px; -fx-background-radius: 10px;"/>
+
+        <!-- TableView for displaying prescription data -->
+        <TableView fx:id="prescriptionTable" layoutX="20" layoutY="70" prefWidth="760" prefHeight="400">
+            <columns>
+                <TableColumn fx:id="patientNameCol" text="Patient Name" prefWidth="120"/>
+                <TableColumn fx:id="medicineNameCol" text="Medicine Name" prefWidth="120"/>
+                <TableColumn fx:id="morningCol" text="Morning" prefWidth="80"/>
+                <TableColumn fx:id="afternoonCol" text="Afternoon" prefWidth="80"/>
+                <TableColumn fx:id="eveningCol" text="Evening" prefWidth="80"/>
+                <TableColumn fx:id="imagePathCol" text="Image Path" prefWidth="280"/>
+            </columns>
+        </TableView>
+
     </children>
 </AnchorPane>
