HealthClock is a JavaFX-based application that helps users manage their medication schedules. It allows users to upload prescription images or manually input details to set automatic alarms for medicine times. Alarms repeat based on prescription instructions and are automatically deleted after the specified period.

--- a/src/main/resources/com/tanjid/healthclock/view-medicines.fxml
+++ b/src/main/resources/com/tanjid/healthclock/view-medicines.fxml
@@ -38,6 +38,7 @@
                 <TableColumn fx:id="eveningCol" text="Evening" prefWidth="80" />
                 <TableColumn fx:id="durationCol" text="Duration (days)" prefWidth="100" />
                 <TableColumn fx:id="imagePathCol" text="Image Path" prefWidth="180" />
+                <TableColumn fx:id="endDateCol" text="End Date" prefWidth="100" /> <!-- Added this line -->
             </columns>
         </TableView>
 
